old/apache-tomcat-ELB.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "test-app"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "test-app-deployment-apache"
  namespace: "test-app"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "apache-tomcat"
    spec:
      containers:
      - image: 707435581004.dkr.ecr.ap-northeast-1.amazonaws.com/test-apache
        imagePullPolicy: Always
        name: "apache"
        ports:
        - containerPort: 80
      - image: 707435581004.dkr.ecr.ap-northeast-1.amazonaws.com/test-tomcat
        name: "tomcat"
        ports:
        - containerPort: 8009
---
apiVersion: v1
kind: Service
metadata:
  name: "test-app-service-apache"
  namespace: "test-app"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "apache-tomcat"
