old/ingress-tomcat.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "tomcat"
  namespace: "test-app"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
  labels:
    app: test-app
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: "tomcat-service"
              servicePort: 8080
